--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,10 +3,8 @@
 before:
   hooks:
     - rm -rf ./dist
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
-    - go generate ./...
+    #- go generate ./...
 builds:
   - env:
       - CGO_ENABLED=0
@@ -14,6 +12,9 @@ builds:
       - linux
       - windows
       - darwin
+    goarch:
+      - amd64
+      - arm64
 archives:
   - replacements:
       darwin: Darwin
@@ -33,11 +34,11 @@ changelog:
 env_files:
   github_token: ~/.config/goreleaser/github_token
 nfpms:
-- maintainer: Tom LeZotte <tom@lezotte.net>
-  description: Whois command line utility.
-  homepage: https://victr.vumc.org
-  license: MIT
-  bindir: /app001/bin
-  formats:
-  - deb
-  - rpm
+  - maintainer: VICTR Server Admins <victr.server.admins@vumc.org>
+    description: Whois command line utility.
+    homepage: https://victr.vumc.org
+    license: MIT
+    bindir: /app001/bin
+    formats:
+    - deb
+    - rpm
