--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -35,10 +35,15 @@ env_files:
   github_token: ~/.config/goreleaser/github_token
 nfpms:
   - maintainer: VICTR Server Admins <victr.server.admins@vumc.org>
+    vendor: Vanderbilt University Medical Center
     description: Whois command line utility.
     homepage: https://victr.vumc.org
     license: MIT
-    bindir: /app001/bin
+#    bindir: /app001/bin
+    replacements:
+      darwin: Darwin
+      linux: Linux
+      amd64: x86_64
     formats:
     - deb
     - rpm
